@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-17T16:07:36Z",
-  "count_outdated" : 44,
-  "uniques_outdated" : 14,
+  "timestamp" : "2022-08-22T08:09:06Z",
+  "count_outdated" : 45,
+  "uniques_outdated" : 15,
   "count" : 48,
   "uniques" : 18,
   "views" : [
-    {
-      "timestamp": "2022-08-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-08-09T00:00:00Z",
       "count": 1,
